# CAPSTONE

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  errors.py  router.py
backend/app/api/routes/: applications.py  career.py  dashboard.py  data.py  health.py  ingestion.py  opportunities.py  targets.py
backend/app/core/: __init__.py  config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  career.py  system_metadata.py
backend/app/schemas/: __init__.py  applications.py  career.py  dashboard.py  health.py  ingestion.py  opportunities.py  targets.py
backend/app/services/: ai.py  applications.py  audit.py  career.py  dashboard.py  data_management.py  diagnostics.py  documents.py  ingestion.py  opportunities.py  targets.py
backend/migrations/: env.py
backend/migrations/versions/: 20260721_0001_initial.py  20260721_0003_ingestion_runs.py  20260721_0004_ai_operations.py  20260721_0005_multi_source_manifest.py  20260721_0006_opportunities.py  20260722_0007_targets_readiness.py  20260722_0008_target_goal_links.py  20260722_0009_goal_assessments.py  20260722_0010_job_applications.py  f3396633e04e_add_career_intelligence_foundation.py
backend/tests/: conftest.py  test_applications.py  test_career_assets.py  test_config.py  test_dashboard.py  test_data_management.py  test_diagnostics.py  test_health.py  test_ingestion.py  test_opportunities.py  test_targets.py
docs/architecture/: domain-model.md  system-architecture.md
docs/decisions/: README.md
docs/development/: getting-started.md  stage-3-testing.md  stage-4-onboarding.md  stage-5-opportunities.md  stage-6-5-interface-consolidation.md  stage-6-targets-readiness.md  (+3 more)
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
schemas/: capstone-import-v1.schema.json  capstone-import-v1.template.json
scripts/: restore-backup.ps1  setup.ps1  verify.ps1
(+28 files in other folders)
