[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "capstone-api"
version = "0.1.0"
description = "Local-first CAPSTONE career intelligence API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "google-genai>=1.0,<2",
  "pydantic-settings>=2.10,<3",
  "pypdf>=6.0,<7",
  "python-docx>=1.2,<2",
  "python-multipart>=0.0.20,<1",
  "reportlab>=4.2,<5",
  "sqlmodel>=0.0.24,<0.1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --basetemp=C:/tmp/capstone-pytest -q"
testpaths = ["tests"]
cache_dir = "C:/tmp/capstone-tool-cache/pytest"

[tool.ruff]
line-length = 100
target-version = "py312"
cache-dir = "C:/tmp/capstone-tool-cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
cache_dir = "C:/tmp/capstone-tool-cache/mypy"
